add icons in header and update some styling

--- a/style.css
+++ b/style.css
@@ -58,10 +58,9 @@ nav ul li a:hover {
 }
 
 .right p {
-  font-size: 1.5rem;
-  padding: 0px 10px;
+  font-size: 1rem;
+  padding: 0px 5px;
 }
-
 
 
 /*-------------------------------- main styling -------------------   */
@@ -70,7 +69,7 @@ nav ul li a:hover {
 
 /*---------------- section 1 styling ---------------- */
 
-.sect-one-outer{
+.sect-one-outer {
   padding: 25px;
 }
 
@@ -326,6 +325,10 @@ nav ul li a:hover {
   text-align: left;
 }
 
+.product-card:hover h3 {
+  text-decoration: underline;
+}
+
 
 /* product images  */
 
@@ -475,7 +478,9 @@ nav ul li a:hover {
 }
 
 .product-card button:hover {
-  background: #333;
+  background: #fff;
+  border: 1px solid;
+  color: black;
 }
 
 
@@ -619,7 +624,7 @@ nav ul li a:hover {
 
 .video-card {
   flex: 0 0 auto;
-  width: 200px;
+  width: 250px;
   text-align: center;
 }
 
@@ -662,13 +667,22 @@ nav ul li a:hover {
 
 .caption {
   margin-top: 10px;
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: 500;
   color: #111;
   cursor: pointer;
   border-bottom: 1px solid #111;
   display: inline-block;
   padding-bottom: 3px;
+}
+
+.video-card:hover .caption {
+  font-weight: 700;
+  text-decoration: solid;
+}
+
+.caption:hover {
+  font-weight: 700;
 }
 
 
@@ -701,7 +715,8 @@ nav ul li a:hover {
   /* gap: 20px; */
   padding: 40px 0px;
 }
-.section-6-box1 > p{
+
+.section-6-box1>p {
   font-size: 2.5rem;
   font-weight: 600;
 }
@@ -915,8 +930,8 @@ nav ul li a:hover {
 }
 
 
-#box4-text{
-position: absolute;
+#box4-text {
+  position: absolute;
   z-index: 10;
   top: 170px;
   left: 640px;
@@ -1136,7 +1151,7 @@ footer {
     height: 450px;
   }
 
-  .section-7-box2{
+  .section-7-box2 {
     margin-top: 30px;
   }
 
@@ -1159,13 +1174,14 @@ footer {
 
 
   /* ---------- section 6 ------------ */
-  .section-6{
+  .section-6 {
     padding: 10px;
   }
 
-  .section-6-box1 > p{
+  .section-6-box1>p {
     font-size: 1.5rem;
   }
+
   .section-6-box1 .section-6-nested-box-title {
     font-size: 2.5rem;
     text-align: center;
@@ -1260,11 +1276,11 @@ footer {
     /* text-align: center; */
   }
 
-  .footer-section-three-box1{
+  .footer-section-three-box1 {
     margin-bottom: 10px;
   }
 
-  .footer-section-three-box3{
+  .footer-section-three-box3 {
     order: 2;
   }
 
@@ -1311,10 +1327,11 @@ footer {
 
 
   /* ------- section 6 --- */
-  .section-6{
+  .section-6 {
     padding: 10px;
 
   }
+
   .section-6-box1 .section-6-nested-box-title {
     font-size: 2rem;
   }
@@ -1359,6 +1376,17 @@ footer {
     margin-bottom: 15px;
   }
 
+  /* ---------- section 4 ------------ */
+
+  .video-card {
+    flex: 0 0 auto;
+    width: 180px;
+    text-align: center;
+  }
+
+  .video-card .caption {
+    font-size: 1rem;
+  }
 
 
   /* -------- section 2 -------- */
@@ -1548,7 +1576,7 @@ footer {
   }
 
 
-  
+
   /* ----------- section 6 ------------- */
   .section-6 {
     padding: 30px 0;
